--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "format": "./scripts/format.sh",
     "nx-release": "./scripts/nx-release.js",
     "test": "nx run-many --target=test --projects=eslint-plugin-nx --parallel",
-    "lint": "nx run-many --target=lint --all --parallel",
+    "lint": "nx run-many --target=lint --projects=eslint-plugin-nx --parallel",
     "depcheck": "ts-node -P ./scripts/tsconfig.scripts.json ./scripts/depcheck.ts",
     "local-registry": "./scripts/local-registry.sh",
     "documentation": "./scripts/documentation/documentation.sh && ./scripts/documentation/check-documentation.sh",
